@@ -86,6 +86,12 @@ struct expr *esp;
                 if ((indx = admode(R8X)) != 0) {
                         mode = S_R8X;
                 } else
+                if ((indx = admode(R8U1)) != 0) {
+                        mode = S_R8U1;
+                } else
+                if ((indx = admode(R8U2)) != 0) {
+                        mode = S_R8U2;
+                } else
                 if ((indx = admode(R16X)) != 0) {
                         mode = S_R16X;
                 } else {
@@ -202,6 +208,21 @@ struct  adsym   R8X[] = {
     { "i",      I|0400 },
     { "r",      R|0400 },
     { "",       0000 }
+};
+
+
+/* Undocument instructions for 0xDD prefix H->IX high, L->IX low */
+struct  adsym   R8U1[] = {
+  { "ixh",  H|0400 },
+  { "ixl",  L|0400 },
+  { "",       0000 }
+};
+
+/* Undocument instructions for 0xFD prefix H->IY high, L->IY low */
+struct  adsym   R8U2[] = {
+  { "iyh",  H|0400 },
+  { "iyl",  L|0400 },
+  { "",       0000 }
 };
 
 struct  adsym   R16[] = {
